# reckoner

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md
crates/reckoner-cli/: Cargo.toml
crates/reckoner-cli/src/: main.rs
crates/reckoner-cli/src/commands/: doctor.rs  lint.rs  mod.rs  repo.rs  schedule.rs  status.rs  task.rs
crates/reckoner-core/: Cargo.toml
crates/reckoner-core/src/: config.rs  container.rs  db.rs  fixloop.rs  infra.rs  lib.rs  lint.rs  logs.rs  repo.rs  schedule.rs  task.rs  toolchain.rs
docs/: prd-vps-container-execution.md  spec-vps-container-execution.md
infra/: Dockerfile  entrypoint.sh
tests/: smoke_test.sh
