[package]
name = "reckoner-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
rusqlite_migration = "1"
bollard = "0.18"
toml = "0.8"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
dirs = "6"
regex = "1"
async-trait = "0.1"
futures-util = "0.3"
plist = "1"
globset = "0.4"

[dev-dependencies]
tempfile = "3"
